@@ -298,6 +298,9 @@ Stream Stream::simplify(
     ));
 }
 
+
+
+
 #define RPY_SERIAL_IMPL_CLASSNAME rpy::streams::Stream
 
 #include <roughpy/platform/serialization_instantiations.inl>
