@@ -1,0 +1,13 @@
+import pytest
+import roughpy as rp
+
+
+def test_lie_basis_iteration():
+
+    ctx = rp.get_context(2, 2, rp.DPReal)
+    basis = ctx.lie_basis
+
+    keys = list(basis)
+
+    print(*keys)
+    assert len(keys) == 3
